--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.5.1",
     "immer": "^10.0.3",
     "loadash": "^1.0.0",
     "redux": "^4.2.1",
